Fix: footer alignment issue on mobile view

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -565,6 +565,13 @@ footer svg {
   /* .footer .footer__block {
     display: block;
   } */
+  .footer__copyright+div {
+    text-align: -webkit-center;
+  }
+
+  .footer__icons.footer {
+    text-align: -webkit-center;
+  }
 }
 
 /* Docs */
